Finished assignment 6 in Arrays and functions

--- a/Week_1/Arrays and functions/6/assignment6.html
+++ b/Week_1/Arrays and functions/6/assignment6.html
@@ -7,7 +7,16 @@
     <script src="script6.js" defer></script>
 </head>
 <body>
-    <p id="result"></p>
+    
+    <div>
+        <h2>Movies ordered by ratings:</h2>
+        <ul id="moviesList">
+
+        </ul>
+
+        <h2>Highest rated movie:</h2>
+        <p id="topMovie"></p>
+    </div>
     
 </body>
 </html>
