Fixed CSS Recap assignment and code

--- a/Week_1/CSS_Recap/Assignment_2.html
+++ b/Week_1/CSS_Recap/Assignment_2.html
@@ -13,7 +13,7 @@
         <a id="linkToW3" href="https://www.w3schools.com" target="_blank">Click here to visit W3Schools.com!</a>
         <img id="imgOfRDR2" src="img/image.png" alt="An image of RDR2" width="600"/>
         <div>Down below, you'll find a table</div>
-        <table style="width:100%">
+        <table id="table">
             <tr>
                 <th class="defaultRow">First name</th>
                 <th class="tableSecondRow">Last name</th>
