T4 done from DOM assignments

--- a/Week_2/dom-assignments/t4/t4.html
+++ b/Week_2/dom-assignments/t4/t4.html
@@ -11,14 +11,14 @@
 
 <body>
   <h1>Restaurants</h1>
+  <div id="userLoc"></div>
   <table>
     <tr>
       <th>Name</th>
       <th>Address</th>
+      <th>Distance</th>
     </tr>
     <!-- add restaurants here -->
   </table>
-
 </body>
-
 </html>
